Put in a fix for table height changing. Just stops table text from wrapping - hence change height.

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -40,6 +40,7 @@ table {
     float: left;
     border-collapse: collapse;
     table-layout: fixed;
+    white-space: nowrap;
 }
 .error {
     color: red;
